--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-scripts": "3.4.1",
-    "recompose": "^0.30.0"
+    "recompose": "^0.30.0",
+    "semantic-ui-react": "^0.88.2",
+    "shortid": "^2.2.15"
   },
   "scripts": {
     "start": "react-scripts start",
